# rust-ui

./: .gitignore  AGENTS.md  Cargo.toml  LINE_RENDERER_USAGE.md  README.md  bench.nu  layout.json  render_debug.cap
.cargo/: config.toml
.zed/: debug.json
assets/atlas/: icons.csv
benchmarks/: Cargo.toml  log.md
benchmarks/src/: main.rs  text_rendering.rs
cad/: .gitignore  Cargo.toml
cad-frontend/: Cargo.toml  README.md
cad-frontend/assets/: default.conf
cad-frontend/src/: app.rs  entity_picker.rs  input.rs  main.rs  modes.rs  sketch_renderer.rs
cad-frontend/src/ui/: area.rs  area_manager.rs  boundary.rs  mod.rs  modes.rs  perf_overlay.rs  scene_explorer.rs  settings.rs  viewport.rs
cad/src/: entity.rs  lib.rs  registry.rs  sketch.rs  topology.rs
demo/: Cargo.toml
demo/src/: main.rs
modes/: Cargo.toml
modes/src/: lib.rs
nurbs/: Cargo.toml
nurbs/src/: main.rs
rust-ui/: Cargo.toml  README.md  build.rs
rust-ui/shaders/gles300/: rounded_rect.frag  text.frag
rust-ui/src/: geometry.rs  input.rs  lib.rs  main.rs  perf_overlay.rs  shader.rs  state.rs  style.rs
rust-ui/src/render/: batch_2d_line.rs  circle.rs  graph.rs  line.rs  mesh.rs  mod.rs  point.rs  rect.rs  renderer.rs  sprite.rs  text.rs
rust-ui/src/render/widgets/: mod.rs  scrollable.rs  select.rs  text_field.rs
scripts/: codegen.py  pyproject.toml  sprite_atlas.py  test_codegen.py
shaders/: rounded_rect.frag  text.vs
shaders/gles300/: line.frag  line.vs  rounded_rect.vs  text.frag  text.vs
shaders/glsl330/: graph.frag  line.vs  mesh.vs  picking.frag  picking.vs  rounded_rect.frag  rounded_rect.vs  sprite.frag  sprite.vs  text.frag
src/: geometry.rs  main.rs  shader.rs  state.rs
src/render/: clay.rs  mod.rs  rect.rs  text.rs
time-series/: Cargo.toml
time-series/assets/: default.conf
time-series/assets/test_csvs/: VOUT02.CSV  sawtooth.csv
time-series/src/: app.rs  graph_widget.rs  main.rs
time-series/src/pipeline/: mod.rs  processing.rs  ui.rs
