[package]
name = "rust-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
freetype-rs = "0.38.0"
gl = "0.14.0"
glfw = "0.60.0"
glm = {package ="nalgebra-glm", version = "0.20.0"}
num = "0.4.3"
tracing = "0.1.41"
tracing-log = "0.2.0"
image = "0.24.7"  # For PNG writing in tests
clay-layout = "0.4.0"
