[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
glfw = "0.60.0"
gl = "0.14.0"
glm = {package ="nalgebra-glm", version = "0.20.0"}
taffy = "0.9.1"
rust-ui = { path = "../rust-ui"}
tracy-client = { version = "0.18.2", default-features = false, features = ["enable"] }
