[package]
name = "cad-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
cad = { path = "../cad"}
glfw = "0.60.0"
gl = "0.14.0"
glm = {package ="nalgebra-glm", version = "0.20.0"}
taffy = "0.9.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rust-ui = { path = "../rust-ui"}
sysinfo = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
anyhow = "1.0"
tracy-client = { version = "0.18.2", default-features = false, features = ["enable"] }
keybinds = "0.2.0"
strum = { version = "0.27.2", features = ["derive"] }
colored = "3.0.0"
clap = { version = "4.5.53", features = ["derive"] }
