[package]
name = "time-series"
version = "0.1.0"
edition = "2024"

[dependencies]
glfw = "0.60.0"
gl = "0.14.0"
glm = { package ="nalgebra-glm", version = "0.20.0" }
modes = { path = "../modes"}
rfd = { version = "0.15.3" }
taffy = "0.9.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rust-ui = { path = "../rust-ui"}
sysinfo = "0.37.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
peroxide = "0.40.0"
strum = { version = "0.27.2", features = ["derive"] }
csv = "1.4.0"
keybinds = "0.2.0"
